--- a/app/assets/stylesheets/admin/layout.css
+++ b/app/assets/stylesheets/admin/layout.css
@@ -670,9 +670,9 @@ table.component-table td a {
 
 /* --- tree ---- */
 
-#tree-browser {
+ol.tree {
   width: 400px;
-  height: 400px;
+  height: 300px;
   padding: 10px;
 }
 
