--- a/app/views/noodall/admin/nodes/tree.js.erb
+++ b/app/views/noodall/admin/nodes/tree.js.erb
@@ -1,2 +1,2 @@
-$('#tree-browser').html( "<%= escape_javascript(render :partial => 'branch', :locals => { :nodes => Noodall::Node.roots(@options), :options => @options }) %>" );
+$('#tree-browser').html( "<%= escape_javascript(render :partial => 'branch' ) %>" );
 $('#tree-browser ol.tree ol').hide();
