--- a/app/views/noodall/admin/assets/_show.html.erb
+++ b/app/views/noodall/admin/assets/_show.html.erb
@@ -7,7 +7,7 @@
 
 
 <div class="row-fluid">
-  <div class="span5">
+  <div class="span5 asset-img">
     <div class="well pull-left">
       <% if @asset.image? or @asset.video? %>
         <%= link_to(image_tag( @asset.url('500x400', @asset.web_image_extension), :alt => @asset.description, :id => "asset-#{@asset.id}" ), @asset.url, :class => ('lightboxVideo' if @asset.video?)) %>
@@ -17,13 +17,13 @@
     </div>
   </div> <!-- span5 -->
   
-  <div class="span7">
+  <div class="span7 pull-left alert alert-info">
     
     <h2><%=h @asset.title %></h2>
     <p><strong>File Size:</strong> <%= number_to_human_size( @asset.file_size ) %></p>
     <p><strong>Description:</strong> <%= @asset.description %></p>
     <% unless readonly %>
-      <p><%= link_to "Edit '#{@asset.title}'", edit_noodall_admin_asset_path(@asset), :title => "Edit '#{@asset.title}'" , :class => 'edit' %></p>
+        <div class="btn-group"><button class="btn"><%= link_to "Edit '#{@asset.title}'", edit_noodall_admin_asset_path(@asset), :title => "Edit '#{@asset.title}'" , :class => 'edit' %></button></div>
     <% end %>
 
     <h2>Used <%= @asset.log_entries.count %> times</h2>
@@ -37,9 +37,9 @@
 
     <% if @asset.tags? %>
       <h2>'<%= @asset.title %>' Tags</h2>
-      <ul>
+      <ul class="tags">
         <% for tag in @asset.tags %>
-          <li><%= link_to "#{h( tag )}", :tag => tag  %></li>
+          <li><span class="label label-info"><%= link_to "<i class='icon-tag'></i> #{h( tag )}".html_safe, :tag => tag  %></span></li>
         <% end -%>
       </ul>
     <% elsif !readonly -%>
