--- a/app/views/noodall/admin/nodes/index.html.erb
+++ b/app/views/noodall/admin/nodes/index.html.erb
@@ -25,18 +25,20 @@
 
 
 <div class="row-fluid">
-  <div class="span12">
-    
-    <%= form_tag '', :method => :get, :id => 'filter', :class => "well form-inline pull-right" do %>
-      <%= label_tag :f, 'Filter by Title' %>
-      <%= text_field_tag :f %>
-      <%= submit_tag "Filter", :class => "btn" %>
-    <% end %>
-    <% if params[:f] %>
-      <%= link_to "reset", url_for(:only_path => false, :f => nil), :class => 'button' %>
-    <% end %>
+    <div class="span7 offset5 filter-by-title">
+      <%= form_tag '', :method => :get, :id => 'filter', :class => "well form-inline pull-right" do %>
+        <%= label_tag :f, 'Filter by Title' %>
+        <%= text_field_tag :f %>
+        <%= submit_tag "Filter", :class => "btn" %>
+      <% end %>
+      <% if params[:f] %>
+        <%= link_to "reset", url_for(:only_path => false, :f => nil), :class => 'button' %>
+      <% end %>
+    </div>
+</div>
 
-    
+<div class="row-fluid">
+  <div class="span12">
     <%= will_paginate(@nodes, :previous_label => 'Previous', :next_label => 'Next') %>
      <table border="0" cellspacing="0" cellpadding="0" class="table table-bordered table-hover" id="content-table">
       <thead>
@@ -67,9 +69,14 @@
           </td>
           
           <td class="date" title="by <%= updater_name(node) %>"><%=h node.updated_at.to_formatted_s(:noodall_time) %></td>
-          <td class="show"><%= link_to '<i class="icon-search"></i>'.html_safe, node_path(node), :class => 'show', :title => 'View this content' if node.published? %></td>
-          <td class="publish" title="<%= node.published? ? 'Published ':'Hidden' %><%= node.published_at.to_formatted_s(:short_ordinal) unless node.published_at.nil? %><%= " - #{node.published_to.to_formatted_s(:noodall_time)}" unless node.published_to.nil? %>"><%= (node.published? ? '<i class="icon-ok-sign"></i>' : '<i class="icon-ban-circle"></i>').html_safe %></td>
-          <td class="delete"><%= link_to '<i class="icon-remove-sign"></i>'.html_safe, noodall_admin_node_path(node), :confirm => 'Are you sure?', :method => :delete, :class => 'delete', :title => 'Delete this content' unless node.in_site_map? %></td>
+          <% if node.published? %>
+          <td class="show"><%= link_to '<i class="icon-eye-open"></i>'.html_safe, node_path(node), :class => 'show', :title => 'View this content' if node.published? %></td>
+          <% else %>
+          <td class="show"><i class="icon-eye-close"></i></td>
+          <% end %>
+          
+          <td class="publish" title="<%= node.published? ? 'Published ':'Hidden' %><%= node.published_at.to_formatted_s(:short_ordinal) unless node.published_at.nil? %><%= " - #{node.published_to.to_formatted_s(:noodall_time)}" unless node.published_to.nil? %>"><%= (node.published? ? '<i class="icon-ok"></i>' : '<i class="icon-file"></i>').html_safe %></td>
+          <td class="delete"><%= link_to '<i class="icon-remove"></i>'.html_safe, noodall_admin_node_path(node), :confirm => 'Are you sure?', :method => :delete, :class => 'delete', :title => 'Delete this content' unless node.in_site_map? %></td>
         </tr>
     <% end %>
       </tbody>
@@ -80,6 +87,8 @@
       </tfoot>
     </table>
     <%= will_paginate(@nodes, :previous_label => 'Previous', :next_label => 'Next') %>
+  </div>
+</div>
 
   </div> <!-- span12 -->
 </div> <!-- row-fluid -->
