Ref #15036. Simplify the use of fancybox for the general component tree browser. Pass a scope_with param to the node tree browser so we can differentiate between the tiny-mce and general content component usage.

--- a/app/views/noodall/admin/nodes/_branch.html.erb
+++ b/app/views/noodall/admin/nodes/_branch.html.erb
@@ -1,4 +1,4 @@
-<ol class="tree">
+<ol class="tree <%= params[:scope_with] %>">
 <% if @parent.nil? %>
   <% if params[:mode] == 'parent' %>
   <li><a id="id-none" class="<%= params[:mode] %>" href="/">Root</a></li>
