--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -129,7 +129,7 @@
                     :mode => 'parent'
                   ),
                   :class => 'edit-item',
-                  :title => 'Select a parent',
+                  :title => 'Select a parent'
                 %>
               </span>
               <%= f.hidden_field :parent, :value => @node.parent_id %>
