--- a/app/views/layouts/noodall_admin.html.erb
+++ b/app/views/layouts/noodall_admin.html.erb
@@ -14,13 +14,13 @@
 <!-- END META TAGS -->
 <title><%= admin_page_title %> | <%= Noodall::UI.app_name %> <%= Noodall::UI.system_name %></title>
 <%= stylesheet_link_tag 'admin',  :media=>'screen,tv,projection' %>
-<%= stylesheet_link_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery.ui.all.css' %>
+<%= stylesheet_link_tag '//ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery.ui.all.css' %>
 
 <!--[if IE 6]><%= stylesheet_link_tag 'admin/ie6',  :media=>'screen,tv,projection' %><![endif]-->
 <!--[if IE 7]><%= stylesheet_link_tag 'admin/ie',  :media=>'screen,tv,projection' %><![endif]-->
 <!--[if IE 8]><%= stylesheet_link_tag 'admin/ie8',  :media=>'screen,tv,projection' %><![endif]-->
 
-<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+<script src="//www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript">
   google.load("jquery", "1.4.2");
   google.load("jqueryui", "1.8");
